# Streamlit-PDF-Ingestion-Chat

./: .dockerignore  Dockerfile  README.md  about.py  app.py  chat.py  ingestion.py  knowledgebase.py  main.py  pyproject.toml  requirements.txt
