[project]
name = "chatbot-streamlitapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "streamlit-option-menu>=0.4.0",
]

[tool.uv.workspace]
members = [
    "chatbot_streamlitapp",
]
